// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#pagination/pagination/centered <Centered /> With \`pageNumber\` and \`totalPages\` renders 1`] = `
<ul
  className="pagination"
>
  <li
    className="current-page"
  >
    <Link>
      <a
        data-discover="true"
        href="/1"
        onClick={[Function]}
      >
        <span
          className="page-number"
        >
          1
        </span>
      </a>
    </Link>
  </li>
  <li
    className="page"
  >
    <Link>
      <a
        data-discover="true"
        href="/2"
        onClick={[Function]}
      >
        <span
          className="page-number"
        >
          2
        </span>
      </a>
    </Link>
  </li>
</ul>
`;

exports[`#pagination/pagination/centered <Centered /> With \`spread\` renders 1`] = `
<ul
  className="pagination"
>
  <li
    className="zero-page"
  >
    <Link>
      <a
        data-discover="true"
        href="/1"
        onClick={[Function]}
      >
        <span
          className="page-number"
        >
          1
        </span>
      </a>
    </Link>
  </li>
  <li
    className="reverse-page"
  >
    <Link>
      <a
        data-discover="true"
        href="/3"
        onClick={[Function]}
      >
        <span
          className="reverse"
        >
          ‹
        </span>
      </a>
    </Link>
  </li>
  <Fragment>
    <li
      className="page"
    >
      <Link>
        <a
          data-discover="true"
          href="/4"
          onClick={[Function]}
        >
          <span
            className="page-number"
          >
            4
          </span>
        </a>
      </Link>
    </li>
    <li
      className="current-page"
    >
      <Link>
        <a
          data-discover="true"
          href="/5"
          onClick={[Function]}
        >
          <span
            className="page-number"
          >
            5
          </span>
        </a>
      </Link>
    </li>
    <li
      className="page"
    >
      <Link>
        <a
          data-discover="true"
          href="/6"
          onClick={[Function]}
        >
          <span
            className="page-number"
          >
            6
          </span>
        </a>
      </Link>
    </li>
  </Fragment>
  <li
    className="forward-page"
  >
    <Link>
      <a
        data-discover="true"
        href="/7"
        onClick={[Function]}
      >
        <span
          className="forward"
        >
          ›
        </span>
      </a>
    </Link>
  </li>
  <li
    className="last-page"
  >
    <Link>
      <a
        data-discover="true"
        href="/9"
        onClick={[Function]}
      >
        <span
          className="page-number"
        >
          9
        </span>
      </a>
    </Link>
  </li>
</ul>
`;
